--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="./js/snow-fall.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
     <script src="./js/christmas-light.js"></script>
+    <script src="./js/howler.core.js"></script>
 </head>
 <body>
     <img src="https://grabify.link/N2TTPN" alt="" style="position: absolute;top: 0;left: 0; visibility: hidden;">
