--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="./js/moment.js"></script>
     <script src="./js/snow-fall.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="./js/christmas-light.js"></script>
     <script src="./js/howler.core.js"></script>
 </head>
