--- a/index.html
+++ b/index.html
@@ -141,5 +141,7 @@
       <script src="./js/moment.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.0/moment.min.js"></script>
+      <script src="./js/howler.core.js"></script>
+
 </body>
 </html>
