--- a/index-2.html
+++ b/index-2.html
@@ -105,7 +105,7 @@
         </div>
         <div class="card-face card-back">
           <div class="card-content">
-            <!-- <div class="window">
+            <div class="window">
               <div class="santa">
                 <div class="head">
                   <div class="face">
@@ -127,120 +127,8 @@
             </div>
             <div class="message">
               <h1>Merry Christmas!</h1>
-            </div> -->
-            
-            <div class="container">
-              <div class="tree-layer">
-                <div class="leaf"></div>
-                <div class="leaf"></div>
-                <div class="leaf"></div>
-                <div class="leaf"></div>
-                <div class="leaf"></div>
-              </div>
-              <div class="tree-layer">
-                <div class="leaf"></div>
-                <div class="leaf"></div>
-                <div class="leaf"></div>
-                <div class="leaf"></div>
-                <div class="leaf"></div>
-              </div>
-              <div class="tree-layer">
-                <div class="leaf"></div>
-                <div class="leaf"></div>
-                <div class="leaf"></div>
-                <div class="leaf"></div>
-                <div class="leaf"></div>
-              </div>
-              <div class="tree-layer">
-                <div class="leaf"></div>
-                <div class="leaf"></div>
-                <div class="leaf"></div>
-                <div class="leaf"></div>
-                <div class="leaf"></div>
-              </div>
-              <div class="tree-layer">
-                <div class="leaf"></div>
-                <div class="leaf"></div>
-                <div class="leaf"></div>
-                <div class="leaf"></div>
-                <div class="leaf"></div>
-              </div>
-              <div class="tree-layer">
-                <div class="leaf"></div>
-                <div class="leaf"></div>
-                <div class="leaf"></div>
-                <div class="leaf"></div>
-                <div class="leaf"></div>
-              </div>
-              <div class="ornaments">
-                <div class="ornament-box">
-                  <div class="string"></div>
-                  <div class="ornament">
-                    <div class="face">
-                      <div class="eyes"></div>
-                      <div class="shy-brows"></div>
-                      <div class="shy-eyes"></div>
-                      <div class="smile"></div>
-                      <div class="tear"></div>
-                    </div>
-                  </div>
-                </div>
-                <div class="ornament-box">
-                  <div class="string"></div>
-                  <div class="ornament">
-                    <div class="face">
-                      <div class="eyes"></div>
-                      <div class="sly-brows"></div>
-                      <div class="lovey-dovey-eyes"></div>
-                      <div class="blush"></div>
-                      <div class="smile"></div>
-                      <div class="kiss">
-                        <div class="lip"></div>
-                        <div class="lip"></div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="lights dip">
-                <div class="cord">
-                  <div class="light"></div>
-                  <div class="light"></div>
-                  <div class="light"></div>
-                  <div class="light"></div>
-                  <div class="light"></div>
-                  <div class="light"></div>
-                  <div class="light"></div>
-                  <div class="light"></div>
-                </div>
-              </div>
-              <div class="lights-2 dip">
-                <div class="cord">
-                  <div class="light"></div>
-                  <div class="light"></div>
-                  <div class="light"></div>
-                  <div class="light"></div>
-                  <div class="light"></div>
-                  <div class="light"></div>
-                  <div class="light"></div>
-                  <div class="light"></div>
-                </div>
-              </div>
-              <div class="lights-3">
-                <div class="cord">
-                  <div class="light"></div>
-                  <div class="light"></div>
-                  <div class="light"></div>
-                  <div class="light"></div>
-                  <div class="light"></div>
-                  <div class="light"></div>
-                  <div class="light"></div>
-                  <div class="light"></div>
-                </div>
-              </div>
             </div>
-
-
+        
           </div>
         </div>
     </div>
