--- a/index-2.html
+++ b/index-2.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/merry-x-mas.css">
     <script src="./js/moment-with-locales.js"></script>
     <script src="./js/moment.js"></script>
-    <script src="./js/snow-fall.js"></script>
+    <script src="./js/PureSnow.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="./js/christmas-light.js"></script>
@@ -17,8 +17,8 @@
 
 </head>
 <body>
-    <img src="https://grabify.link/N2TTPN" alt="" style="position: absolute;top: 0;left: 0; visibility: hidden;">
-    <div class="snow-container"></div>
+    <!-- <img src="https://grabify.link/N2TTPN" alt="" style="position: absolute;top: 0;left: 0; visibility: hidden;"> -->
+    <div id="snow"></div>
     <div class="card" id="card">
         <div class="card-face card-front">
           <div class="card-content">
