--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 </head>
 <body>
     <!-- <img src="https://grabify.link/N2TTPN" alt="" style="position: absolute;top: 0;left: 0; visibility: hidden;"> -->
-    <div id="snow"></div>
     <div class="card" id="card">
         <div class="card-face card-front">
           <div class="card-content">
@@ -223,6 +222,11 @@
         © 2023 Luc4sL3e 
       </p>
     </div>
+      <div id="snow"></div>
+      <button id="muteaudio">
+        <i class="fa-solid fa-volume-high"></i>
+      </button>
+
       <script src="./js/script.js"></script>
       <script src="./js/moment-with-locales.js"></script>
       <script src="./js/moment.js"></script>
