--- a/index.html
+++ b/index.html
@@ -214,6 +214,11 @@
                 </div>
               </div>
             </div>
+            <div class="christmas-message">
+              <p class="message-content">
+                For you at Christmas time: A wish for happiness, warmth, and love.
+              </p>
+            </div>
           </div>
         </div>
     </div>
