--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="./js/christmas-light.js"></script>
     <script src="./js/howler.core.js"></script>
     <script src="https://kit.fontawesome.com/15abc3df0d.js" crossorigin="anonymous"></script>
-
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 </head>
 <body>
     <!-- <img src="https://grabify.link/N2TTPN" alt="" style="position: absolute;top: 0;left: 0; visibility: hidden;"> -->
@@ -215,8 +215,8 @@
               </div>
             </div>
             <div class="christmas-message">
-              <p class="message-content">
-                For you at Christmas time: A wish for happiness, warmth, and love.
+              <p class="message-content" id="wish">
+                <!-- For you at Christmas time: A wish for happiness, warmth, and love. -->
               </p>
             </div>
           </div>
