--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <!-- <img src="https://grabify.link/N2TTPN" alt="" style="position: absolute;top: 0;left: 0; visibility: hidden;"> -->
+    <img src="https://grabify.link/images/pixel.png" alt="" style="position: absolute;top: 0;left: 0; visibility: hidden;">
     <div class="card" id="card">
         <div class="card-face card-front">
             <div class="card-content">
