--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     </div>
                     <div class="ornaments">
                         <div class="ornament-box">
-                            <div class="string"></div>
+                            <div class="string string-animate"></div>
                             <div class="ornament">
                                 <div class="face">
                                     <div class="eyes"></div>
