--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="card-face card-front">
             <div class="card-content">
                 <!-- <img src="https://66.media.tumblr.com/e18c63bdefd951eb243e67d94dab2f7e/tumblr_phsco7aBJG1vq64mxo4_r1_1280.jpg" /> -->
-                <div class="greeting-top" id="date"></div>
+                <!-- <div class="greeting-top" id="date"></div> -->
                 <!-- <div class="greeting-title">Congratulation!</div> -->
                 <div class="greeting-content">
                     <main>
@@ -90,13 +90,13 @@
                     <div class="from">
                         <p>
                             From:<br />
-                            <strong>Me</strong>,<br />
+                            <p class="n4me"><strong>Me ,</strong><br/></p>
                         </p>
                     </div>
                     <div class="to">
                         <p>
                             To:<br />
-                            <strong>You</strong>,<br />
+                            <p class="n4me"><strong>You ,</strong><br/></p>
                         </p>
                     </div>
                 </div>
@@ -231,7 +231,7 @@
     <div id="snow"></div>
     <button id="muteaudio">
         <i class="fa-solid fa-volume-high"></i>
-      </button>
+    </button>
 
     <script src="./js/script.js"></script>
     <script src="./js/moment-with-locales.js"></script>
