--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="card-face card-front">
             <div class="card-content">
                 <!-- <img src="https://66.media.tumblr.com/e18c63bdefd951eb243e67d94dab2f7e/tumblr_phsco7aBJG1vq64mxo4_r1_1280.jpg" /> -->
-                <!-- <div class="greeting-top" id="date"></div> -->
+                <div class="greeting-top" id="date"></div>
                 <!-- <div class="greeting-title">Congratulation!</div> -->
                 <div class="greeting-content">
                     <main>
