--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
                 <div class="greeting-from-to">
                     <div class="from">
                         <p>
-                            From:<br />
-                            <p class="n4me"><strong>Me ,</strong><br/></p>
+                            From:
+                            <p class="n4me"><strong>Me ,</strong></p>
                         </p>
                     </div>
                     <div class="to">
                         <p>
-                            To:<br />
-                            <p class="n4me"><strong>You ,</strong><br/></p>
+                            To:
+                            <p class="n4me"><strong>You ,</strong></p>
                         </p>
                     </div>
                 </div>
