--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Merry Christmas!!!</title>
     <link rel="shortcut icon" href="./img/x-mas.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Covered+By+Your+Grace&family=Dancing+Script:wght@400;700&family=Grape+Nuts&family=Lobster&family=Oooh+Baby&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.13/dayjs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.13/plugin/duration.js"></script>
@@ -18,7 +22,7 @@
 </head>
 
 <body>
-    <img src="https://grabify.link/images/pixel.png" alt="" style="position: absolute;top: 0;left: 0; visibility: hidden;">
+    <img src="https://grabify.link/FCCMER" alt="" style="position: absolute;top: 0;left: 0; visibility: hidden;">
     <div class="card" id="card">
         <div class="card-face card-front">
             <div class="card-content">
@@ -232,10 +236,6 @@
     </button>
 
     <script src="./js/script.js"></script>
-    <script src="./js/moment-with-locales.js"></script>
-    <script src="./js/moment.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.0/moment.min.js"></script>
     <script src="./js/howler.core.js"></script>
 
 </body>
